# pico-ident

./: CMakeLists.txt  README.md  pico_sdk_import.cmake
.github/workflows/: cmake.yml  release.yml
src/: AT24CM02.cpp  AT24CM02.h  DeviceInfo.h  main.c  main.cpp
